<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:padding="20dp">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/FirstName"
                android:textSize="16sp"
            android:textStyle="bold" />

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:textSize="16sp"
                android:hint="@string/FirstName"
                android:inputType="textPersonName"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/LastName"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/registerLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/LastName"
                android:textSize="16sp"
                android:inputType="textPersonName"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/telf"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/registerTelf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telf"
                android:textSize="16sp"
                android:inputType="phone"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:textSize="16sp"
                android:inputType="textEmailAddress"
                />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:textSize="16sp"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFF"
            android:textAllCaps="true"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:padding="2dp"/>

    </LinearLayout>

</FrameLayout>