<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".activities.MainActivity">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kind_card"
            android:layout_margin="4dp"
            android:layout_centerInParent="true"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kind_card"
            android:layout_margin="4dp"
            android:id="@+id/token_id"
            android:textSize="18sp"/>
    </RelativeLayout>

    <com.braintreepayments.cardform.view.CardForm
            android:id="@+id/card_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

    <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/email_editTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="25dp"
                android:hint="Correo"
                android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <ImageView
                android:src="@drawable/ic_credit_card"
                android:layout_width="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <EditText
                android:layout_margin="2dp"
                android:layout_weight="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txt_cardnumber"
                android:background="@drawable/border"
                android:selectAllOnFocus="false"
                android:hint="@string/hint_card_number"
                android:maxLength="16" />
            <ImageView
                android:src="@drawable/visa"
                android:layout_margin="2dp"
                android:layout_weight="0.5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <ImageView
                android:layout_weight="0.1"
                android:layout_margin="2dp"
                android:src="@drawable/ic_date_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/txt_year"
                android:maxLength="2"
                android:hint="@string/hint_year"
                android:background="@drawable/border"/>

            <EditText
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/txt_month"
                android:maxLength="2"
                android:hint="@string/hint_month"
                android:background="@drawable/border" />
            <!--<ImageView
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:src="@drawable/ic_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />-->
            <EditText
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/txt_cvv"
                android:maxLength="3"
                android:hint="@string/hint_cvv"
                android:background="@drawable/border"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:paddingTop="18dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_centerInParent="true"
                android:ems="10"
                android:background="@drawable/border"
                android:id="@+id/txt_email"
                android:hint="@string/hint_email"/>
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/button_token" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>